--- a/package.json
+++ b/package.json
@@ -6,16 +6,23 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
-    "dev": "ts-node-dev --respawn --transpile-only src/index.ts"
+    "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
+    "test": "jest --coverage"
   },
   "dependencies": {
-    "node-telegram-bot-api": "^0.64.0",
-    "dotenv": "^16.3.1"
+    "axios": "^1.13.0",
+    "dotenv": "^16.3.1",
+    "lodash": "^4.17.21",
+    "node-telegram-bot-api": "^0.64.0"
   },
   "devDependencies": {
     "typescript": "^5.6.0",
     "ts-node-dev": "^2.0.0",
     "@types/node": "^20.5.1",
-    "@types/node-telegram-bot-api": "^0.63.0"
+    "@types/node-telegram-bot-api": "^0.63.0",
+    "jest": "^29.6.1",
+    "ts-jest": "^29.1.0",
+    "@types/jest": "^29.5.3",
+    "@types/lodash": "^4.14.195"
   }
 }
